[gd_scene load_steps=9 format=3 uid="uid://c2rcd3n3d5dce"]

[ext_resource type="Script" path="res://scenes/purple_slime.gd" id="1_quwkw"]
[ext_resource type="Texture2D" uid="uid://c47cs4rlam782" path="res://assets/sprites/slime_purple.png" id="2_b57ym"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ksej8"]
atlas = ExtResource("2_b57ym")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_insgy"]
atlas = ExtResource("2_b57ym")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdlie"]
atlas = ExtResource("2_b57ym")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3raw2"]
atlas = ExtResource("2_b57ym")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_gto1k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksej8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_insgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdlie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3raw2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fo8bk"]
size = Vector2(10, 12)

[node name="slime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_quwkw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gto1k")
autoplay = "default"

[node name="rayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(9, 0)

[node name="rayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-8, 0)

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Enemy"]]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_fo8bk")

[node name="SlimeSoundPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -24.0
max_distance = 300.0
attenuation = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_fo8bk")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
